fix wrapping problem with my profile pushdown

--- a/karl/views/static/ux2/css/karl/pushdowns.less
+++ b/karl/views/static/ux2/css/karl/pushdowns.less
@@ -144,6 +144,19 @@
         margin-left: 0.5em;
     }
 }
+.myprofileContent {
+    width: 100%;
+}
+.panel.mycommunities {
+    width: 35%;
+}
+.panel.myrecentitems {
+    width: 35%;
+}
+.panel.myprofile {
+    width: 20%;
+    padding-top: 40px;
+}
 .panel {
     position: relative;
     .col(6);
